Another attempt at preventing wrapping around Finalist images

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -71,6 +71,7 @@ h4 {
 
 .applicant-info img {
   margin-right: 20px;
+  float: none;
 }
 
 .nav {
